--- a/_posts/PYTHON/2024-03-12-midterm.md
+++ b/_posts/PYTHON/2024-03-12-midterm.md
@@ -1,6 +1,11 @@
 ---
-title: midterm
-categories: PYTHON
+title: "midterm"
+
+categories: 
+  - PYTHON
+tags:
+  - [python, jekyll, Github, 과제]
+
 toc: true
 toc_sticky: true
 ---
