--- a/_posts/R/2024-03-13-entrance.md
+++ b/_posts/R/2024-03-13-entrance.md
@@ -4,7 +4,7 @@ title: "[R 실습] 01-2 해외 입국자 추이 확인하기"
 categories: 
   - R
 tags:
-  - [프로그래밍, 데이터 분석, 실습]
+  - [R, 프로그래밍, 데이터 분석, 실습]
 
 toc: true
 toc_sticky: true
