--- a/_posts/R/2024-03-13-forest.md
+++ b/_posts/R/2024-03-13-forest.md
@@ -4,7 +4,7 @@ title: "[R 실습] 01-1 지역별 국내 휴양림 분포 비교하기] "
 categories: 
   - R
 tags:
-  - [프로그래밍, 데이터 분석, 실습]
+  - [R, 프로그래밍, 데이터 분석, 실습]
 
 toc: true
 toc_sticky: true
