--- a/_posts/R/2024-03-13-koweps7.md
+++ b/_posts/R/2024-03-13-koweps7.md
@@ -4,7 +4,7 @@ title: "[R 실습] 02-7 성별 직업 빈도"
 categories: 
   - R
 tags:
-  - [프로그래밍, 데이터 분석, 실습]
+  - [R, 프로그래밍, 데이터 분석, 실습]
 
 toc: true
 toc_sticky: true
