--- a/_posts/PYTHON/2024-03-16-pml2-3.md
+++ b/_posts/PYTHON/2024-03-16-pml2-3.md
@@ -1,3 +1,21 @@
+---
+title: "[Python 머신러닝] 02-3 사이킷런 기반 프레임워크 익히기"
+
+categories: 
+  - PYTHON
+tags:
+  - [Python, 프로그래밍, 머신러닝, 공부]
+
+toc: true
+toc_sticky: true
+---
+
+# 사이킷런 기반 프레임워크 익히기
+
+## 사이킷런 기반 프레임워크 - Estimator와 fit(), predict()
+  - Estimator - 학습: fit(), 예측: predict()
+    - Classifier(분류) - 분류 구현 클래스
+
 ### 사이킷런 내장 예제 데이터
 
 
