--- a/_posts/PYTHON/2024-03-18-pml2-5.md
+++ b/_posts/PYTHON/2024-03-18-pml2-5.md
@@ -1,6 +1,48 @@
-### 데이터 인코딩
+---
+title: "[Python 머신러닝] 02-5 데이터 전처리"
 
-* 레이블 인코딩(Label encoding)
+categories: 
+  - PYTHON
+tags:
+  - [Python, 프로그래밍, 머신러닝, 공부]
+
+toc: true
+toc_sticky: true
+---
+
+
+# 데이터 전처리
+  - 데이터 클렌징
+  - 결손값 처리(Null/NaN 처리)
+  - 데이터 인코딩(레이블, 원-핫 인코딩)
+  - 데이터 스케일링
+  - 이상치 제거
+  - Feature 선택, 추출 및 가공
+
+## 데이터 인코딩
+  - 머신러닝 알고리즘은 문자열 데이터 속성을 입력 받지 않으며 모든 데이터는 숫자형으로 표현되어야 한다. <br> 문자형 카테고리형 속성은 모두 숫자값으로 변환/인코딩 되어야 한다.
+
+
+### 레이블 인코딩(Label encoding)
+  - LabelEncoder 클래스
+  - fit()과 transform()을 이용하여 변환  
+
+
+
+
+  상품 분류|가격|---레이블 인코딩 후-->|상품 분류|가격
+  :---:|:---:|---|:---:|:---:
+  TV|1,000,000||0|1,000,000
+  냉장고|1,500,000||1|1,500,000
+  전자렌지|200,000||4|200,000
+  컴퓨터|800,000||5|800,000
+  선풍기|100,000||3|100,000
+  선풍기|100,000||3|100,000
+  믹서|50,000||2|50,000
+  믹서|50,000||2|50,000
+
+[TV, 냉장고, 전자렌지, 컴퓨터, 선풍기, 믹서] ---> [0, 1, 4, 5, 3, 2]
+
 
 
 ```python
@@ -16,7 +58,9 @@ print('인코딩 변환값:',labels)
 ```
 
     인코딩 변환값: [0 1 4 5 3 3 2 2]
-    
+
+-> 사이킷런에서는 학습을 할 때도, 변환을 할 때도 fit() 사용 <br> encoder.fit_transform()으로 fit()과 transform() 같이 수행 가능
+
 
 
 ```python
@@ -32,9 +76,29 @@ print('디코딩 원본 값:',encoder.inverse_transform([4, 5, 2, 0, 1, 1, 3, 3]
 ```
 
     디코딩 원본 값: ['전자렌지' '컴퓨터' '믹서' 'TV' '냉장고' '냉장고' '선풍기' '선풍기']
-    
 
-* 원-핫 인코딩(One-Hot encoding)
+
+
+
+### 원-핫 인코딩(One-Hot encoding)
+  - OneHotEncoder 클래스
+  - fit()과 transform()을 이용하여 변환 
+  - 인자로 2차원 ndarray 입력 필요 <br> Sparse 배열 형태로 변환되므로 toarray()를 적용하여 다시 Dense 형태로 변환되어야 함
+  - pd.get_dummies(DataFrame)을 이용
+  - 피처 값의 유형에 따라 새로운 피처를 추가해 고유 값에 해당하는 컬럼에만 1을 표시하고 나머지 컬럼에는 0을 표시하는 방식
+
+
+상품 분류|--원-핫 인코딩 후->|상품분류_TV|상품분류_냉장고|상품분류_믹서|상품분류_선풍기|상품분류_전자렌지|상품분류_컴퓨터
+:---:|---|:---:|:---:|:---:|:---:|:---:|:---:
+TV||1|0|0|0|0|0
+냉장고||0|1|0|0|0|0
+전자렌지||0|0|0|0|1|0
+컴퓨터||0|0|0|0|0|1
+선풍기||0|0|0|1|0|0
+선풍기||0|0|0|1|0|0
+믹서||0|0|1|0|0|0
+믹서||0|0|1|0|0|0
+
 
 
 ```python
@@ -187,9 +251,13 @@ pd.get_dummies(df)
 
 
 
-### 피처 스케일링과 정규화
+## 피처 스케일링과 정규화
+  - 표준화는 데이터의 피처 각각이 평균이 0이고 분산이 1인 가우시안 정규 분포를 가진 값으로 변환하는 것을 의미한다.
+  - 정규화는 서로 다른 피처의 크기를 통일하기 위해 크기를 변환해주는 개념이다.
 
-* StandardScaler
+
+### StandardScaler
+  - 평균이 0이고, 분산이 1인 정규 분포 형태로 변환
 
 
 ```python
@@ -255,7 +323,8 @@ print(iris_df_scaled.var())
     dtype: float64
     
 
-* MinMaxScaler
+### MinMaxScaler
+  - 데이터값을 0과 1 사이의 범위 값으로 변환한다. (음수 값이 있으면 -1에서 1 값으로 변환)
 
 
 ```python
@@ -289,9 +358,11 @@ print(iris_df_scaled.max())
     petal length (cm)    1.0
     petal width (cm)     1.0
     dtype: float64
-    
 
-* Scaler를 이용하여 학습 데이터와 테스트 데이터에 fit(), transform(), fit_transform() 적용 시 유의사항. 
+-> scaler.fit(iris_df)로 max와 min을 구함
+
+
+  - Scaler를 이용하여 학습 데이터와 테스트 데이터에 fit(), transform(), fit_transform() 적용 시 유의사항. 
 
 
 ```python
@@ -327,7 +398,7 @@ print('Scale된 train_array 데이터:', np.round(train_scaled.reshape(-1), 2))
 scaler.fit(test_array)
 # 1/5 scale로 test_array 데이터 변환함. 원본 5->1로 변환.  
 test_scaled = scaler.transform(test_array)
-# train_array 변환 출력
+# test_array 변환 출력
 print('원본 test_array 데이터:', np.round(test_array.reshape(-1), 2))
 print('Scale된 test_array 데이터:', np.round(test_scaled.reshape(-1), 2))
 
@@ -336,6 +407,7 @@ print('Scale된 test_array 데이터:', np.round(test_scaled.reshape(-1), 2))
     원본 test_array 데이터: [0 1 2 3 4 5]
     Scale된 test_array 데이터: [0.  0.2 0.4 0.6 0.8 1. ]
     
+-> 학습할 때의 척도(1/10)와 테스트할 때의 척도(1/5)가 달라서 동일한 데이터 값이 다르게 변환됨
 
 
 ```python
@@ -358,8 +430,5 @@ print('Scale된 test_array 데이터:', np.round(test_scaled.reshape(-1), 2))
     원본 test_array 데이터: [0 1 2 3 4 5]
     Scale된 test_array 데이터: [0.  0.1 0.2 0.3 0.4 0.5]
     
+-> train_array의 scale 기준으로 test_array도 scale됨
 
-
-```python
-
-```
