Update 2.6 사이킷런으로 수행하는 타이타닉 생존자 예측 .md

--- a/_posts/PYTHON/2.6 사이킷런으로 수행하는 타이타닉 생존자 예측 .md
+++ b/_posts/PYTHON/2.6 사이킷런으로 수행하는 타이타닉 생존자 예측 .md
@@ -1,3 +1,18 @@
+---
+title: "[Python 머신러닝] 02-6 사이킷런으로 수행하는 타이타닉 생존자 예측"
+
+categories: 
+  - PYTHON
+tags:
+  - [Python, 프로그래밍, 머신러닝, 공부]
+
+toc: true
+toc_sticky: true
+---
+
+# 사이킷런으로 수행하는 타이타닉 생존자 예측
+
+
 ```python
 import numpy as np
 import pandas as pd
