--- a/_posts/PYTHON/2024-03-19-pml2-6.md
+++ b/_posts/PYTHON/2024-03-19-pml2-6.md
@@ -13,6 +13,18 @@ toc_sticky: true
 # 사이킷런으로 수행하는 타이타닉 생존자 예측
 
 
+## 타이타닉 생존자 예측 ML 구현
+  - 데이터 전처리
+    - Null 처리
+    - 불필요한 속성 제거
+    - 인코딩 수행
+  - 모델 학습 및 검증/예측/평가
+    - 결정트리, 랜덤포레스트, 로지스틱 회귀 학습 비교
+    - K 폴드 교차 검증
+    - cross_val_score()과 GridSearchCV() 수행
+
+
+
 ```python
 import numpy as np
 import pandas as pd
@@ -276,7 +288,7 @@ titanic_df.describe().transpose()
 
 
 
-**NULL 컬럼들에 대한 처리**
+## **NULL 컬럼들에 대한 처리**
 
 
 ```python
@@ -290,7 +302,7 @@ print('데이터 세트 Null 값 갯수 ',titanic_df.isnull().sum().sum())
     데이터 세트 Null 값 갯수  0
     
 
-**주요 컬럼 EDA**
+## **주요 컬럼 EDA**
 
 
 ```python
@@ -360,7 +372,7 @@ titanic_df['Cabin'].str[:1]
     890    N
     Name: Cabin, Length: 891, dtype: object
 
-
+-> .str[:1]: 첫 글자만 출력(문자열 가공)
 
 
 ```python
@@ -431,7 +443,7 @@ sns.barplot(x='Sex', y = 'Survived', data=titanic_df)
 
 
     
-![png](output_14_1.png)
+"/images/output_14_1.png"
     
 
 
@@ -449,7 +461,7 @@ sns.barplot(x='Pclass', y='Survived', hue='Sex', data=titanic_df)
 
 
     
-![png](output_15_1.png)
+"/images/output_15_1.png"
     
 
 
@@ -484,8 +496,8 @@ titanic_df.drop('Age_cat', axis=1, inplace=True)
 ```
 
 
-    
-![png](output_16_0.png)
+
+"/images/output_16_0.png"
     
 
 
@@ -621,6 +633,9 @@ titanic_df.head()
 </table>
 </div>
 
+-> 범주형 칼럼을 숫자형 칼럼으로 인코딩  
+    - .fit(): 데이터의 분포를 학습하고 모델을 적합시킴 (LabelEncoder의 경우, 주어진 칼럼의 고유한 값들을 학습하고, 각 값에 대해 고유한 숫자를 매핑하는 데 사용)  
+    - .transform(): 데이터를 변환함 (fit() 메서드로 학습된 매핑 정보를 사용하여 범주형 칼럼을 숫자형 칼럼으로 변환)
 
 
 
@@ -945,13 +960,3 @@ print('테스트 세트에서의 DecisionTreeClassifier 정확도 : {0:.4f}'.for
     GridSearchCV 최고 정확도: 0.7992
     테스트 세트에서의 DecisionTreeClassifier 정확도 : 0.8715
     
-
-
-```python
-
-```
-
-
-```python
-
-```
