--- a/_posts/PYTHON/4.2_결정트리.md
+++ b/_posts/PYTHON/4.2_결정트리.md
@@ -1,4 +1,44 @@
-### 결정 트리 모델의 시각화(Decision Tree Visualization)
+---
+title: "[Python 머신러닝] 04-2 결정 트리"
+
+categories: 
+  - PYTHON
+tags:
+  - [Python, 프로그래밍, 머신러닝, 공부]
+
+toc: true
+toc_sticky: true
+---
+
+# 결정 트리
+
+- 결정 트리 알고리즘은 데이터에 있는 규칙을 학습을 통해 자동으로 찾아내 트리(Tree) 기반의 분류 규칙을 만든다. (If-Else 기반 규칙)
+- 따라서 데이터의 어떤 기준을 바탕으로 규칙을 만들어야 가장 효율적인 분류가 될 것인가가 알고리즘의 성능을 크게 좌우한다.
+
+### 정보 균일도 측정 방법
+- **정보 이득(Information Gain)**: 엔트로피라는 개념을 기반으로 한다. <br> 엔트로피는 주어진 데이터 집합의 혼잡도를 의미하는데, 서로 다른 값이 섞여 있으면 엔트로피가 높고, 같은 값이 섞여 있으면 엔트로피가 낮다. <br> 정보 이득 지수는 1에서 엔트로피 지수를 뺀 값이다. 즉, 1-엔트로피지수이다. <br> 결정 트리는 이 정보 이득 지수로 분할 기준을 정한다. 즉, 정보 이득이 높은 속성을 기준으로 분할한다.
+- **지니 계수**: 원래 경제학에서 불평등 지수를 나타낼 때 사용하는 계수이다. <br> 경제학자인 코라도 지니(Corrado Gini)의 이름에서 딴 계수로서 0이 가장 평등하고 1로 갈수록 불평등하다. <br> 머신러닝에 적용될 때는 지니 계수가 낮을 수록 데이터 균일도가 높은 것으로 해석되어 계수가 낮은 속성을 기준으로 분할한다. 
+
+
+## 결정 트리 모델의 특징
+
+**결정 트리 장점**|**결정 트리 단점**
+---|---
+*쉽고, 직관적이다 <br> *피처의 스케일링이나 정규화 등의 사전 가공 영향도가 크지 않다|*과적합으로 알고리즘 성능이 떨어진다 <br> *이를 극복하기 위해 트리의 크기를 사전에 제한하는 튜닝이 필요하다
+
+
+## 결정 트리 파라미터
+
+파라미터 명|설명
+---|---
+max_depth|*트리의 최대 깊이를 규정 <br> *디폴트는 None. None으로 설정하면 완벽하게 클래스 결정 값이 될 때까지 깊이를 계속 키우며 분할하거나 노드가 가지는 데이터 개수가 min_samples_split보다 작아질 때까지 계속 깊이를 증가시킴 <br> *깊이가 깊어지면 min_samples_split 설정대로 최대 분할하여 과적합할 수 있으므로 적절한 값으로 제어 필요
+max_features|*최적의 분할을 위해 고려할 최대 피처 개수. 디폴트는 None으로 데이터 세트의 모든 피처를 사용해 분할 수행 <br> *int 형으로 지정하면 대상 피처의 개수, float 형으로 지정하면 전체 피처 중 대상 피처의 퍼센트임 <br> *'sqrt'는 전체 피처 중 sqrt(전체 피처 개수), 즉 $\sqrt {전체 피처}$개수 만큼 선정 <br> *'auto'로 지정하면 sqrt와 동일 <br> *'log'는 전체 피처 중 log2(전체 피처 개수) 선정 <br> *'None'은 전체 피처 선정
+min_samples_split|*노드를 분할하기 위한 최소한의 샘플 데이터 수로 과적합을 제어하는 데 사용됨 <br> *디폴트는 2이고 작게 설정할 수록 분할되는 노드가 많아져서 과적합 가능성 증가
+min_split_leaf|*말단 노드(Leaf)가 되기 위한 최소한의 샘플 데이터 수 <br> *min_samples_split과 유사하게 과적합 제어 용도. 그러나 비대칭적(imbalanced) 데이터의 경우 특정 클래스의 데이터가 극도록 작을 수 있으므로 이 경우는 작게 설정 필요
+max_leaf_nodes|*말단 노트(Leaf)의 최대 개수
+
+
+## 결정 트리 모델의 시각화
 
 
 ```python
