--- a/_posts/PYTHON/4.7_LightGBM.md
+++ b/_posts/PYTHON/4.7_LightGBM.md
@@ -1,3 +1,18 @@
+---
+title: "[Python 머신러닝] 04-7 LightGBM"
+
+categories: 
+  - PYTHON
+tags:
+  - [Python, 프로그래밍, 머신러닝, 공부]
+
+toc: true
+toc_sticky: true
+---
+
+# 분류
+
+
 ```python
 import lightgbm
 
