--- a/_posts/PYTHON/4.8_베이지안_최적화로_hyperparameter_튜닝.md
+++ b/_posts/PYTHON/4.8_베이지안_최적화로_hyperparameter_튜닝.md
@@ -1,3 +1,21 @@
+---
+title: "[Python 머신러닝] 04-8 베이지안 최적화 기반의 HyperOpt를 이용한 하이퍼 파라미터 튜닝"
+
+categories: 
+  - PYTHON
+tags:
+  - [Python, 프로그래밍, 머신러닝, 공부]
+
+toc: true
+toc_sticky: true
+---
+
+# 분류
+
+## 베이지안 최적화 기반의 HyperOpt를 이용한 하이퍼 파라미터 튜닝
+
+
+
 ### 베이지안 최적화 개요와 HyperOpt 사용법
 
 
