--- a/_posts/PYTHON/2024-05-08-pml4-8.md
+++ b/_posts/PYTHON/2024-05-08-pml4-8.md
@@ -14,6 +14,65 @@ toc_sticky: true
 
 ## 베이지안 최적화 기반의 HyperOpt를 이용한 하이퍼 파라미터 튜닝
 
+### 하이퍼 파라미터 튜닝 수행 방법
+
+- Grid Search
+- Random Search
+- Bayesian Optimization
+- 수동 튜닝
+
+#### 하이퍼 파라미터 튜닝의 주요 이슈
+
+- Gridient Boosting 기반 알고리즘은 튜닝 해야 할 하이퍼 파라미터 개수가 많고 범위가 넓어서 가능한 개별 경우의 수가 너무 많음
+- 이러한 경우의 수가 많을 경우 데이터가 크면 하이퍼 파라미터 튜닝에 굉장히 오랜 시간이 투입되어야 함
+
+
+#### Grid Search와 Random Search의 주요 이슈
+
+GridSearchCV(classifier, params, cv=3) / RandomizedSearch(classifier, parmas, cv=3, n_iter=10)
+
+```
+params = {  
+    'max_depth' = [10, 20, 30, 40, 50],  
+    'num_leaves' = [35, 45, 55, 65],  
+    'colsample_bytree' = [0.5, 0.6, 0.7, 0.8, 0.9, 1.0],      
+    'subsample' = [0.5, 0.6, 0.7, 0.8, 0.9, 1.0],
+    'max_bin' = [100, 200, 300, 400],
+    'min_child_weight' = [10, 20, 30, 40]
+}
+```
+
+- GridSearchCV는 수행 시간이 너무 오래 걸림 <br> 개별 하이퍼 파라미터들을 Grid 형태로 지정하는 것은 한계가 존재 (데이터 세트가 작을 때 유리)
+- RandomizedSearch는 수행 시간은 줄여 주지만, Random한 선택으로 최적 하이퍼 파라미터 검출에 태생적 제약 (데이터 세트가 클 때 유리)
+- 두 가지 방법 모두 iteration 중에 어느 정도 최적화된 하이퍼 파라미터들을 활용하면서 최적화를 수행할 수 없음
+
+
+#### Bayesian 최적화가 필요한 순간
+
+- 가능한 최소의 시도로 최적의 답을 찾아야 할 경우
+- 개별 시도가 너무 많은 시간/자원이 필요할 때
+
+### 베이지안 최적화 개요
+
+- 베이지안 최적화는 미지의 함수가 반환하는 값의 최소 또는 최대값을 만드는 최적해를 짧은 반복을 통해 찾아내는 최적화 방식
+- 베이지안 최적화는 새로운 데이터를 입력 받았을 때 최적 함수를 예측하는 사후 모델을 개선해 나가면서 최적 함수를 도출
+- 대체 모델(Surrogate Model)과 획득 함수로 구성되며, 대체 모델은 획득 함수로 부터 최적 입력 값을 추천 받은 뒤 이를 기반으로 최적 함수 모델을 개선
+- 획득 함수는 개선된 대체 모델을 기반으로 다시 최적 입력 값을 계산
+
+#### 베이지안 최적화 수행 단계
+
+Step 1: 최초에는 랜덤하게 하이퍼 파라미터들을 샘플링하여 성능 결과를 관측
+
+Step 2: 관측된 값을 기반으로 대체 모델은 최적 함수를 예측 추정
+
+Step 3: 획득 함수에서 다음으로 관측할 하이퍼 파라미터 추출
+
+
+### HyperOpt 사용하기
+
+
+### HyperOpt를 이용한 XGBoost 하이퍼 파라미터 최적화
+
 
 
 ### 베이지안 최적화 개요와 HyperOpt 사용법
