--- a/_posts/PYTHON/4.10_ 분류실습_신용카드_사기검출.md
+++ b/_posts/PYTHON/4.10_ 분류실습_신용카드_사기검출.md
@@ -1,3 +1,19 @@
+---
+title: "[Python 머신러닝] 04-10 분류 실습 - 캐글 신용카드 사기 검출"
+
+categories: 
+  - PYTHON
+tags:
+  - [Python, 프로그래밍, 머신러닝, 공부]
+
+toc: true
+toc_sticky: true
+---
+
+# 분류
+
+## 분류 실습 - 캐글 신용카드 사기 검출
+
 ### 데이터 일차 가공 및 모델 학습/예측/평가
 
 #### 데이터 로드
