--- a/_posts/PYTHON/2024-05-09-pml4-10.md
+++ b/_posts/PYTHON/2024-05-09-pml4-10.md
@@ -14,6 +14,49 @@ toc_sticky: true
 
 ## 분류 실습 - 캐글 신용카드 사기 검출
 
+- Credit Card Fraud Detection 데이터 세트 소개
+
+    - 데이터 셋은 2013년 European Card 사용 트랜잭션을 가공하여 생성
+    - 불균형(imbalanced)되어 있는 데이터 셋 (284,807건의 데이터 중 492건(전체의 0.172%)이 Fraud)
+
+
+- Credit Card Fault Detetion ML 모델 구축
+
+    - 다양한 Feature Engineering 방식을 차례로 Logistic Regression과 LightGBM을 이용하여 적용 후 비교
+        - Feature Engineering
+            - 중요 Feature의 데이터 분포도 변경
+                - 정규 분포
+                - Log 변환
+            - 이상치(Outlier) 제거
+            - SMOTE 오버 샘플링
+        - ML Algorithm
+            - Logistic Regression
+            - LightGBM
+
+
+
+
+
+### 언더 샘플링과 오버 샘플링의 이해
+
+
+
+### 데이터 일차 가공 및 모델 학습/예측/평가
+
+
+### 데이터 분포도 변환 후 모델 학습/예측/평가
+
+
+### 이상치 데이터 제거 후 모델 학습/예측/평가
+
+
+### SMOTE 오버 샘플링 적용 후 모델 학습/예측/평가
+
+
+
+
+
+
 ### 데이터 일차 가공 및 모델 학습/예측/평가
 
 #### 데이터 로드
