--- a/_posts/PYTHON/2024-05-09-pml4-10.md
+++ b/_posts/PYTHON/2024-05-09-pml4-10.md
@@ -26,8 +26,8 @@ toc_sticky: true
         - Feature Engineering
             - 중요 Feature의 데이터 분포도 변경
                 - 정규 분포
-                - Log 변환
-            - 이상치(Outlier) 제거
+                - Log 변환 <br> -> Log 변환은 왜곡된 분포도를 가진 데이터 세트를 비교적 정규 분포에 가깝게 변환해주는 훌륭한 Feature Engineering 방식
+            - 이상치(Outlier) 제거 <br> -> IQR을 이용해 최댓값(3/4 분위수에서 1.5 * IQR 값을 더한 지점) 이상, 최솟값(1/4 분위수에서 1.5 * IQR 값을 뺀 지점) 이하 제거 
             - SMOTE 오버 샘플링
         - ML Algorithm
             - Logistic Regression
@@ -39,6 +39,16 @@ toc_sticky: true
 
 ### 언더 샘플링과 오버 샘플링의 이해
 
+- 레이블이 불균형한 분포를 가진 데이터 세트를 학습 시, 이상 레이블을 가지는 데이터 건수가 매우 적어 제대로 된 유형의 학습이 어려움
+- 반면에 정상 레이블을 가지는 데이터 건수는 매우 많아 일방적으로 정상 레이블로 치우친 학습을 수행하여, 제대로 된 이상 데이터 검출이 어려움
+- 대표적으로 오버 샘플링(Oversampling)과 언더 샘플링(Undersampling) 방법을 통해 적절한 학습 데이터를 확보함
+
+    - 오버 샘플링: 적은 레이블을 가진 데이터 세트를 많은 레이블을 가진 데이터 세트 수준으로 증식 샘플링
+    - 언더 샘플링: 많은 레이블을 가진 데이터 세트를 적은 레이블을 가진 데이터 세트 수준으로 감소 샘플링
+
+#### SMOTE(Synthetic Minority Over-Sampling Technique) 개요
+
+![IMG_7885](https://github.com/gsh06169/gsh06169/assets/150469460/880704c0-3008-4d2d-a392-fbdd87a58e60)
 
 
 ### 데이터 일차 가공 및 모델 학습/예측/평가
