--- a/_posts/PYTHON/4.11_스태킹앙상블.md
+++ b/_posts/PYTHON/4.11_스태킹앙상블.md
@@ -1,3 +1,31 @@
+---
+title: "[Python 머신러닝] 04-10 분류 실습 - 캐글 신용카드 사기 검출"
+
+categories: 
+  - PYTHON
+tags:
+  - [Python, 프로그래밍, 머신러닝, 공부]
+
+toc: true
+toc_sticky: true
+---
+
+# 분류
+
+## 스태킹 앙상블
+
+### 기본 스태킹 모델
+
+
+### CV 세트 기반의 스태킹
+
+
+
+
+
+
+
+
 ```python
 import numpy as np
 
