--- a/_posts/PYTHON/2024-05-09-pml4-11.md
+++ b/_posts/PYTHON/2024-05-09-pml4-11.md
@@ -15,7 +15,13 @@ toc_sticky: true
 ## 스태킹 앙상블
 
 - Basic Stacking Model - Diagram
+기반 모델들이 예측한 값들을 Stacking 형태로 만들어서 메타 모델이 이를 학습하고 예측하는 모델
+![IMG_2571](https://github.com/gsh06169/gsh06169/assets/150469460/c7c48985-17eb-49cf-8661-9aeab157b32d)
+
+
 - Basic Stacking Model - Example
+![IMG_2570](https://github.com/gsh06169/gsh06169/assets/150469460/f5737715-f8d8-4944-9ba3-ca9c98d12824)
+
 
 ### 기본 스태킹 모델
 
