--- a/_posts/PYTHON/2024-05-10-pml5-2.md
+++ b/_posts/PYTHON/2024-05-10-pml5-2.md
@@ -13,3 +13,5 @@ toc_sticky: true
 # 회귀
 
 ## 단순 선형 회귀를 통한 회귀 이해
+
+주택 가격이 주택의 크기로만 결정되는 단순 선형 회귀로 가정하면 다음과 같이 주택 가격은 주택 크기에 대해 선형(직선 형태)의 관계로 표현할 수 있다.
