--- a/_posts/PYTHON/2024-05-13-pml6-2.md
+++ b/_posts/PYTHON/2024-05-13-pml6-2.md
@@ -1,3 +1,35 @@
+---
+title: "[Python 머신러닝] 06-2 PCA(Principal Component Analysis)"
+
+categories: 
+  - PYTHON
+tags:
+  - [Python, 프로그래밍, 머신러닝, 공부]
+
+toc: true
+toc_sticky: true
+---
+
+# 차원 축소
+
+## PCA(Principal Component Analysis)
+
+
+### PCA 개요
+
+#### PCA(Principal Component Analysis)의 이해
+
+- 고차원의 원본 데이터를 저차원의 부분 공간으로 투영하여 데이터를 축소하는 기법
+- 원본 데이터가 가지는 데이터 변동성을 가장 중요한 정보로 간주하며 이 변동성에 기반한 원본 데이터 투영으로 차원 축소를 수행
+
+
+
+
+
+
+
+
+
 ### 붓꽃 데이터로 PCA 변환을 위한 데이터 로딩 및 시각화 
 
 
