--- a/_posts/PYTHON/2024-05-15-pml7-3.md
+++ b/_posts/PYTHON/2024-05-15-pml7-3.md
@@ -86,6 +86,13 @@ KDE = $1 \over nh$ $\sum_{i=1}^{n} {1 \over \sqrt2 \pi h} e^(-{1 \over 2}({x-x_i
 h = $({4\sigma^5 \over 3n})^{1\over5}$ ≈ 1.06 $\sigma n^{-1\over5}$  (단, n은 샘플 데이터의 개수, $\sigma$는 샘플 데이터의 표준편차)
 
 
+#### Bandwidth에 따른 KDE의 변화
+
+![스크린샷 2024-05-15 203342](https://github.com/gsh06169/gsh06169/assets/150469460/62a9ebe6-c162-4437-90ec-c96a9a91c1be)
+
+- 작은 h값은 좁고 Spike한 KDE로 변동성이 큰 확률 밀도 함수를 추정 (오버피팅)
+- 큰 h값은 과도하게 Smoothing된 KDE로 단순화된 확률 밀도 함수를 추정 (언더피팅)
+
 
 
 
