--- a/_posts/BIGDATA/2024-06-02-bd123.md
+++ b/_posts/BIGDATA/2024-06-02-bd123.md
@@ -1,13 +1,15 @@
 ---
-title: "[kaggle] Regression with a Flood Prediction Dataset"
+title: "[BIGDATA] 1-1 [배경] 빅데이터의 정착"
 
 categories: 
   - BIGDATA
 tags:
-  - [Python, project, kaggle]
+  - [bigdata, 공부]
 
 toc: true
 toc_sticky: true
 ---
 
-# Regression with a Flood Prediction Dataset
+# [배경] 빅데이터의 정착
+
+
