--- a/_posts/SQL/2024-06-05-sql6-3.md
+++ b/_posts/SQL/2024-06-05-sql6-3.md
@@ -131,7 +131,76 @@ SHOW TABLE STATUS LIKE 'member';
 ```
 ![스크린샷 2024-06-05 124311](https://github.com/gsh06169/gsh06169/assets/150469460/8687df01-c57c-482d-bbed-2ea4f8100b01)
 
-Data_length는 클러스터형 인덱스(또는 데이터)의 크기를 Byte 단위로 표기한 것이다. <br> 그런데 MySQL의 1페이지 크기는 기본적으로 16KB이므로 클러스터형 인덱스는 16384(16*1024) = 1페이지가 할당되어 있는 것이다. <br> 실제로는 데이터의 내용이 많지 않아서 16KB까지 필요 없지만, 최소 단위가 1페이지이므로 1페이지에 해당하는 16KB가 할당되어 있는 것이다. <br> Index_length는 보조 인덱스의 크기인데 member는 보조 인덱스가 없기 때문에 표기되지 않았다.
+결과 중에 Data_length는 클러스터형 인덱스(또는 데이터)의 크기를 Byte 단위로 표기한 것이다. <br> 그런데 MySQL의 1페이지 크기는 기본적으로 16KB이므로 클러스터형 인덱스는 16384(16*1024) = 1페이지가 할당되어 있는 것이다. <br> 실제로는 데이터의 내용이 많지 않아서 16KB까지 필요 없지만, 최소 단위가 1페이지이므로 1페이지에 해당하는 16KB가 할당되어 있는 것이다. <br> Index_length는 보조 인덱스의 크기인데 member는 보조 인덱스가 없기 때문에 표기되지 않았다.
+
+주소(addr)에 중복을 허용하는 단순 보조 인덱스를 생성하겠다.
+
+```sql
+CREATE INDEX idx_member_addr
+    ON member (addr);
+```
+
+새로 생성된 인덱스를 확인해보겠다.
+
+```sql
+SHOW INDEX FROM member;
+```
+![스크린샷 2024-06-05 125409](https://github.com/gsh06169/gsh06169/assets/150469460/96c49a0a-a2b2-4b53-a885-b6d8e8ebb369)
+
+Key_name에서 생성한 단순 보조 인덱스의 이름이 확인된다. <br> Column_name에서는 어느 열에 지정되었는지 확인된다.
+
+Non_unique가 1로 설정되어 있으므로 고유 보조 인덱스가 아니다.
+
+이번에는 전체 인덱스의 크기를 다시 확인해보겠다.
+
+```SQL
+SHOW TABLE STATUS LIKE 'member';
+```
+![스크린샷 2024-06-05 125807](https://github.com/gsh06169/gsh06169/assets/150469460/bfc999f7-b2ea-4bf8-a678-8c03787aa779)
+
+Index_length 부분이 보조 인덱스의 크기인데, 이상하게도 크기가 0으로 나왔다.
+
+생성한 인덱스를 실제로 적용시키려면 ANALYZE TABLE 문으로 먼저 테이블을 분석/처리해줘야 한다.
+
+```SQL
+ANALYZE TABLE member;
+SHOW TABLE STATUS LIKE 'member';
+```
+![스크린샷 2024-06-05 130057](https://github.com/gsh06169/gsh06169/assets/150469460/a78938ee-c3c6-46f6-bdde-f4b6f3fe454a)
+
+-> 이제 보조 인덱스가 생성된 것이 확인된다.
+
+이번에는 인원수(mem_number)에 중복을 허용하지 않는 고유 보조 인덱스를 생성해보겠다.
+
+```sql
+CREATE UNIQUE INDEX idx_member_mem_number
+    ON member (mem_number);
+```
+-> 인원수에 이미 중복된 값이 있으므로 인원수 열에는 고유 보조 인덱스를 생성할 수 없다.
+
+이번에는 회원 이름(mem_name)에 고유 보조 인덱스를 생성해보겠다.
+
+```sql
+CREATE UNIQUE INDEX idx_member_mem_name
+    ON member (mem_name);
+```
+
+고유 보조 인덱스가 잘 만들어졌는지 확인해보겠다.
+
+```sql
+SHOW INDEX FROM member;
+```
+![스크린샷 2024-06-05 130716](https://github.com/gsh06169/gsh06169/assets/150469460/38ff2028-69b8-4b37-8581-3e9d54ac32a3)
+
+-> Non_unique가 0이라는 것은 중복을 허용하지 않는다는 의미이므로, 고유 보조 인덱스가 잘 생성된 것이다.
+
+이번에는 우연히도 마마무와 이름이 같은 가수 그룹이 회원가입을 하려고 한다. <br> 회원 아이디인 기본 키만 다르면 되므로 MOO로 지정하겠다.
+
+```sql
+INSERT INTO member VALUES('MOO', '마마무', 2, '태국', '001', '12341234', 155, '2020.10.10');
+```
+-> 고유 보조 인덱스로 인해서 중복된 값을 입력할 수 없기 때문에 오류가 발생한다.
+
 
 
 ### 인덱스를 효과적으로 사용하는 방법
